--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>This page is in alpha testing</h1>
-<p>Please return sometime soon or visit the <a href="https://idkwhatiamdoin.github.io/vsmolli/info">info page</a></p>
+<p>Please return sometime soon or visit the <a href="https://idkwhatamidoin.github.io/vsmolli/info">info page</a></p>
 
 </body>
 </html>
